--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,17 @@ dependencies = [
     "opencv-python>=4.11.0.86",
     "pandas>=2.3.3",
     "pandas-stubs>=2.3.2.250926",
+    "pytest>=9.0.1",
+    "pytest-cov>=7.0.0",
     "python-lsp-server>=1.13.1",
     "pytransform3d>=3.14.3",
     "rerun-sdk>=0.27.1",
     "scipy>=1.16.2",
     "scipy-stubs>=1.16.2.4",
+]
+
+[project.optional-dependencies]
+test = [
+    "pytest>=8.3.0",
+    "pytest-cov>=5.0.0",
 ]
